# book-crawlerss

./: .env  .env.example  Dockerfile  README.md  books_db.books.csv  docker-compose.yml  pyproject.toml  requirements.txt
app/api/: main.py
app/api/routes/: books.py  changes.py
app/core/: config.py  rate_limiter.py  security.py
app/models/: book.py  change.py
crawler/: .last_category  config.py  main.py  parser.py  scraper.py  state.py  storage.py
json files/: Book Crawler API.postman_collection.json  books_db.change_log.json
reports/: change_report_2025-09-29.json  change_report_2025-09-30.json  change_report_2025-10-01.json
scheduler/: change_detector.py  main.py  reports.py  tasks.py
tests/: test_api.py  test_change_detection.py  test_crawler.py
utils/: hashing.py
